# mayProject

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml  screenshot.py  ssSearch.py  ssURL.py
.githooks/: pre-commit
.github/workflows/: tests.yml
agent_sandbox/: __init__.py  config.py  executor.py  registry.py  testing.py  tools.py
agent_sandbox/cli/: __init__.py  output.py  python.py  sandbox.py  screenshot.py  shell.py
agent_sandbox/primitives/: __init__.py  browser.py  python.py  shell.py
agent_sandbox/primitives/scripts/: screenshot_page.py
agent_sandbox/sandbox/: __init__.py  fake.py  images.py  results.py  runner.py
agent_sandbox/workflows/: __init__.py  doctor.py  sandbox.py  screenshot.py
docs/: backend.md  cli.md  custom-harness.md  harness-integration.md  planForSand.md  protocol-adapters.md  registry.md  sdk.md  security.md
docs/agents/: README.md  architecture.md  authoring.md  testing.md  workflows.md
examples/: example_agent.py  fake_primitives.py  golden_path_demo.py  harness_runner.py  screenshot_tool.py  simple_harness.py
mayproject/: __init__.py  config.py  search.py  urls.py
mayproject/agents/: __init__.py  base.py  examples.py  registry.py
mayproject/cli/: __init__.py  agent.py  output.py  python.py  sandbox.py  screenshot.py  shell.py
mayproject/primitives/: __init__.py  browser.py  python.py  repo.py  shell.py
mayproject/primitives/scripts/: __init__.py  screenshot_page.py
mayproject/sandbox/: __init__.py  fake.py  images.py  results.py  runner.py  types.py
mayproject/workflows/: __init__.py  capabilities.py  coordinator.py  doctor.py  sandbox.py  screenshot.py  state.py
tests/: test_agent_cli.py  test_capabilities.py  test_config.py  test_doctor.py  test_example_agent.py  test_executor.py  test_images.py  test_managed_sandbox.py  test_modal_integration.py  test_one_shot_cli.py  test_packaging.py  test_primitives.py  test_registry.py  test_results.py  test_screenshot_workflow.py  test_search.py  test_tools.py  test_urls.py  test_workflows.py
