[project]
name = "mayproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "modal>=1.4.2",
    "pydantic>=2.13.3",
]

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project.scripts]
may-python = "mayproject.cli.python:main"
may-screenshot = "mayproject.cli.screenshot:main"
may-sandbox = "mayproject.cli.sandbox:main"
may-shell = "mayproject.cli.shell:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = [
    ".",
]

[tool.mayproject]
app_name = "my-app"
artifacts_dir = "artifacts"
