[project]
name = "agent-sandbox"
version = "0.1.0"
description = "Modal-backed sandbox tools for agent harnesses"
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = "MIT"
dependencies = [
    "modal>=1.4.2",
    "pydantic>=2.13.3",
]
keywords = [
    "agents",
    "modal",
    "sandbox",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project.scripts]
agent-sandbox = "agent_sandbox.cli.sandbox:main"
agent-sandbox-python = "agent_sandbox.cli.python:main"
agent-sandbox-screenshot = "agent_sandbox.cli.screenshot:main"
agent-sandbox-shell = "agent_sandbox.cli.shell:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = [
    ".",
]

[tool.agent-sandbox]
app_name = "my-app"
artifacts_dir = "artifacts"
